[tool.poetry]
name = "git-live"
version = "0.1.0"
description = ""
authors = ["rinatrinat <rinatluske@gmail.com>"]
readme = "README.md"
packages = [{include = "git_live"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
